test/error/lex/unkToken.tig
let
	var ´d := a
in
end
